<resources>
    <string name="app_name">AppMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">People News</string>
    <string name="nav_header_subtitle">Desarrollado por D.E.R</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_ajustes">Ajustes</string>

    <string name="menu_login">Login</string>
    <string name="menu_datos_personales">Datos Personales</string>
    <string name="menu_permisos">Permisos</string>
    <string name="menu_reposo">Reposos</string>
    <string name="menu_vacaciones">Vacaciones</string>
    <string name="menu_estado_solicitud">Estado Solicitud</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
